# tape_task

./: .clang-format  .gitignore  0.txt  1.txt  2.txt  3.txt  4.txt  CMakeLists.txt  README.md  in.txt  main.cpp  tape_task.cmake  test.txt
cfg/: tape_task.yml
include/: config.hpp  creator.hpp  file_tape.hpp  file_tape_create.hpp  file_tape_creator.hpp  sorter.hpp  tape.hpp  tape_create.hpp  tape_sort.hpp
scripts/: build.sh  clang-format.sh
src/: config.cpp  file_tape.cpp  file_tape_create.cpp  file_tape_creator.cpp  sorter.cpp  tape_sort.cpp
tests/: config_test.cpp  config_test.hpp  tests.cmake
tests/include/: config_test.hpp  file_tape_creator_test.hpp  file_tape_test.hpp  sorter_test.hpp
tests/src/: config_test.cpp  file_tape_creator_test.cpp  file_tape_test.cpp  sorter_test.cpp
